name:               rot13
version:            1.0
synopsis:           rotate13
description:        rotate13
category:           System
license:            BSD3
author:             Alan Hawkins
homepage:           xy30.com
maintainer:         hawk.alan@gmail.com
cabal-version:      >= 1.2
build-type:         Simple
extra-source-files: Test/rot13test.hs

executable rot13
    main-is:            Main.hs
    build-depends:      base , containers
